--- a/Project/WebApp/templates/Base.html
+++ b/Project/WebApp/templates/Base.html
@@ -131,8 +131,8 @@
                         <svg class="ic ic-user">
                             <use xlink:href="#User"></use>
                         </svg>
-                    </a>
-                    Đăng xuất
+
+                    Đăng xuất</a>
                     {% else %}
                     <a href="{{ url_for('login') }}" class="log_txt" title="Đăng Nhập">
                         <svg class="ic ic-user">
