--- a/TraiHat/webapp/templates/admin/UserList.html
+++ b/TraiHat/webapp/templates/admin/UserList.html
@@ -1,50 +1,39 @@
-    {% extends 'admin/base.html' %}
-    {{super()}}
+{% extends 'admin/base.html' %}
+{{ super() }}
 
 {% block title %}
-<title> {{title}}</title>
+    <title> {{ title }}</title>
 {% endblock %}
 
 {% block css_header %}
-    <link rel="stylesheet" href="{{url_for('static',filename='admin2/css/sweetalert.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='admin2/css/sweetalert.css') }}">
 {% endblock %}
 
 {% block body %}
-<div class="content-wrapper container">
-    <div class="row">
-        <div class="col-sm-12">
-            <div class="page-title">
-                <h1>{{title}} <small></small></h1>
-                <ol class="breadcrumb">
-                    <li><a href="{{url_for('index_admin')}}"><i class="fa fa-home"></i></a></li>
-                    <li class="active">{{title}}</li>
-                </ol>
-            </div>
 
-
-        </div>
-    </div><!-- end .page title-->
     <div class="row users-row">
 
-        {% for item in listuser %}
+        {% for item in params.get('listuser') %}
 
             <div class="col-md-6">
                 <div class="user-col">
 
                     <div class="media">
-                        <a class="pull-left" href="{{url_for('profile',id = item.id)}}">
+                        <a class="pull-left" href="{{ url_for('profile',id = item.id) }}">
                             <img class="media-object img-circle"
-                                 src="{{url_for('static',filename= 'admin2/images/avtar-2.jpg')}}" alt="100x100"
+                                 src="{{ url_for('static',filename= 'admin2/images/avtar-2.jpg') }}" alt="100x100"
                                  data-src="holder.js/100x100" style="width: 100px; height: 100px;">
                         </a>
                         <div class="media-body">
-                            <h3 class="follower-name">{{item.name}}
-                                <span class="label label-sm label-info" style="margin-left: 2em">{{item.user_role.name}}</span>
-                                <span class="label label-sm label-info" style="margin-left: 0,5em">{{item.active.name}}</span>
+                            <h3 class="follower-name">{{ item.name }}
+                                <span class="label label-sm label-info"
+                                      style="margin-left: 2em">{{ item.user_role.name }}</span>
+                                <span class="label label-sm label-info"
+                                      style="margin-left: 0,5em">{{ item.active.name }}</span>
                             </h3>
 
 
-                            <div><i class="fa fa-map-marker"></i> {{item.address}}</div>
+                            <div><i class="fa fa-map-marker"></i> {{ item.address }}</div>
                             <div><i class="fa fa-briefcase"></i> Software Engineer at <a href="#">SomeCompany, Inc.</a>
                             </div>
 
@@ -52,13 +41,13 @@
 
                             <div class="btn-toolbar">
                                 <div class="btn-group">
-                                    <a href="{{url_for('profile',id = item.id)}}">
-                                    <button class="btn btn-success btn-3d btn-sm"> Profile
-                                    </button>
+                                    <a href="{{ url_for('profile',id = item.id) }}">
+                                        <button class="btn btn-success btn-3d btn-sm"> Profile
+                                        </button>
                                     </a>
                                 </div><!-- btn-group -->
                                 <div class="btn-group">
-                                    <a href="mailto:{{item.email}}">
+                                    <a href="mailto:{{ item.email }}">
                                         <button class="btn btn-info btn-3d btn-sm"><i class="fa fa-envelope-o"></i> Send
                                             Message
                                         </button>
@@ -68,7 +57,7 @@
 
                                     <button class="warning-alert btn-sweet-alert btn btn-success btn-3d btn-sm"
                                             {% if item.active.value %}
-                                                value="true"> Lock Account
+                                            value="true"> Lock Account
                                             {% else %}
                                                 value="false"> UnLock
                                             {% endif %}
@@ -84,19 +73,16 @@
 
         {% endfor %}
     </div>
-
-
-</div>
 {% endblock %}
 
 
-{% block script%}
-{{super()}}
-<script src="{{url_for('static',filename='admin2/js/sweet-alert/sweetalert.min.js')}}"></script>
-<script>
-document.querySelector('.warning-alert').onclick = function () {
+{% block script %}
+    {{ super() }}
+    <script src="{{ url_for('static',filename='admin2/js/sweet-alert/sweetalert.min.js') }}"></script>
+    <script>
+        document.querySelector('.warning-alert').onclick = function () {
 
-                swal({
+            swal({
                     title: "Are you sure?",
                     text: "You will not be able to recover this imaginary file!",
                     type: "warning",
@@ -113,6 +99,6 @@ document.querySelector('.warning-alert').onclick = function () {
                 function () {
                     swal("Lock!", "Your imaginary file has been deleted!", "success");
                 });
-            };
-</script>
+        };
+    </script>
 {% endblock %}
