--- a/TraiHat/webapp/templates/admin/navleft.html
+++ b/TraiHat/webapp/templates/admin/navleft.html
@@ -3,142 +3,54 @@
             <div class="nano-content">
                 <ul class="nav metismenu" id="side-menu">
 
-                    <li>
+                    <li class="{{params.get('nav_dashboard')}}">
                         <a href="#"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboard </span><span
                                 class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="index-2.html">Dashboard </a></li>
-
-
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="mailbox.html"><i class="fa fa-envelope"></i> <span
-                                class="nav-label">Mailbox </span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="mailbox.html">Inbox</a></li>
-                            <li><a href="mail_detail.html">Email view</a></li>
-                            <li><a href="mail_compose.html">Compose email</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-bar-chart"></i> <span class="nav-label">Graphs</span><span
-                                class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="flot_charts.html">Flot charts</a></li>
-                            <li><a href="morris_js.html">Morris.js</a></li>
-                            <li><a href="chart_js.html">Chart.js</a></li>
-                            <li><a href="chartist.html">Chartist</a></li>
-                            <li><a href="chart_sparkline.html">Sparkline</a></li>
+                            <li><a href="/admin">Dashboard </a></li>
                         </ul>
                     </li>
 
-                    <li>
-                        <a href="#"><i class="fa fa-edit"></i> <span class="nav-label">Forms</span><span
-                                class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="form_basic.html">Basic form</a></li>
-                            <li><a href="form_advanced.html">Advanced form</a></li>
-                            <li><a href="form_wizard.html">Wizard form</a></li>
-                            <li><a href="form_file_upload.html">File upload</a></li>
-                            <li><a href="form_text_editor.html">Text editor</a></li>
-                            <li><a href="form_inline_edit.html">Inline edit</a></li>
-                        </ul>
-                    </li>
-                    <li class="active">
-                        <a href="#"><i class="fa fa-files-o"></i> <span class="nav-label">Other Pages</span><span
-                                class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="lockscreen.html">Lockscreen</a></li>
-                            <li><a href="../login.html">Login</a></li>
-                            <li><a href="register.html">Register</a></li>
-                            <li><a href="404.html">404 Page</a></li>
-                            <li><a href="empty_page.html">Empty page</a></li>
-                            <li><a href="gallery.html">gallery</a></li>
-                            <li><a href="price_tables.html">Price tables</a></li>
-                            <li><a href="page_contact.html">Contact Page</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-shopping-cart"></i> <span class="nav-label">E-commerce</span><span
-                                class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="orders.html">orders</a></li>
-                            <li><a href="order-view.html">order View</a></li>
-                            <li><a href="products.html">Products</a></li>
+                        <li >
+                            <a href="#"><i class="fa fa-files-o"></i> <span class="nav-label">Other Pages</span><span
+                                    class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level collapse">
 
+                                    <li><a href="{{ url_for('loginAdmin') }}">Login Admin</a></li>
+                                    <li><a href="{{ url_for('login') }}">Login User</a></li>
+                                    <li><a href="register.html">Register</a></li>
+                                    <li><a href="404">404 Page</a></li>
+                                    <li><a href="{{ url_for('index') }}">Home</a></li>
+                                    <li><a href="lockscreen.html">Lockscreen</a></li>
+                                    <li><a href="{{ url_for('changepassword') }}">Change password</a></li>
+                                    <li><a href="{{ url_for('bloglist') }}">Blog list</a></li>
+                                    <li><a href="{{ url_for('blogdetail') }}">Blog detail</a></li>
+                                    <li><a href="{{ url_for('contact') }}">Contact Page</a></li>
+                                    <li><a href="{{ url_for('about') }}">About Page</a></li>
 
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-flask"></i> <span class="nav-label">UI Elements</span><span
-                                class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="typography.html">Typography</a></li>
-                            <li><a href="icons.html">Icons</a></li>
-                            <li><a href="buttons.html">Buttons</a></li>
-                            <li><a href="video.html">Video</a></li>
-                            <li><a href="tabs_panels.html">Panels</a></li>
-                            <li><a href="tabs.html">Tabs</a></li>
-                            <li><a href="alert_notifications.html">Alert & notifications</a></li>
-                        </ul>
-                    </li>
+                            </ul>
 
-                    <li>
-                        <a href="grid_options.html"><i class="fa fa-laptop"></i> <span
-                                class="nav-label">Grid options</span></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-table"></i> <span class="nav-label">Tables</span><span
-                                class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="table_basic.html">Static Tables</a></li>
-                            <li><a href="table_data_tables.html">Data Tables</a></li>
-                        </ul>
-                    </li>
-                    <li>
+                        </li>
+
+                    <li class="{{ params.get('nav_profile') }}">
                         <a href="#"><i class="fa fa-users"></i> <span class="nav-label">Users</span><span
                                 class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="user_profile.html">profile</a></li>
+                            <li><a href="{{ url_for('profile') }}">profile</a></li>
                             <li><a href="{{url_for('userlist')}}">User list</a></li>
 
                         </ul>
                     </li>
-                    <li>
-                        <a href="#"><i class="fa fa-map-marker"></i> <span class="nav-label">maps</span><span
-                                class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="google_maps.html">Google maps</a></li>
-                            <li><a href="vector_maps.html">Vector Maps</a></li>
-                        </ul>
-                    </li>
-                    <li>
+
+                    <li class="{{ params.get('nav_blog') }}">
                         <a href="#"><i class="fa fa-pencil"></i> <span class="nav-label">Blog</span><span
                                 class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="blog_list.html">Blog list</a></li>
-                            <li><a href="blog_post.html">Blog post</a></li>
+                            <li><a href="{{ url_for('bloglist') }}">Blog list</a></li>
+                            <li><a href="{{ url_for('blogdetail') }}">Blog post</a></li>
                         </ul>
-                    </li>
-                    <li><a href="calendar.html"><i class="fa fa-calendar"></i> <span class="nav-label">Calendar </span></a>
                     </li>
 
-                    <li>
-                        <a href="#"><i class="fa fa-sitemap"></i> <span class="nav-label">Menu Levels </span><span
-                                class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li>
-                                <a href="#">Third Level <span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="#">Third Level Item</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Second Level Item</a></li>
-                        </ul>
-                    </li>
                 </ul>
 
             </div>
