--- a/TraiHat/webapp/templates/admin/navheader.html
+++ b/TraiHat/webapp/templates/admin/navheader.html
@@ -13,10 +13,13 @@
             <a class="navbar-brand" href="#">Be-Admin</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
+            <!--
+             <ul class="nav navbar-nav">
+
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle button-wave" data-toggle="dropdown" aria-expanded="true">Mega
                         Menu<span class="caret"></span></a>
+
                     <ul class="dropdown-menu mega-dropdown-menu" style="width: 900px;">
                         <li>
                             <div class="yamm-content">
@@ -67,6 +70,7 @@
                             </div>
                         </li>
                     </ul>
+
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle button-wave" data-toggle="dropdown" role="button"
@@ -82,7 +86,7 @@
                     </ul>
                 </li>
             </ul>
-
+                -->
             <ul class="nav navbar-nav navbar-right navbar-top-drops">
                 <li class="dropdown"><a href="#" class="dropdown-toggle button-wave" data-toggle="dropdown">
                              <span>
@@ -101,10 +105,8 @@
                         }
                     </style>
                     <ul class="dropdown-menu  style-dropdown-menu-right dropdown-lg animated fadeInRight ">
-                        <li><a href="#"><i class="fa fa-user"></i>My Profile</a></li>
-                        <li><a href="#"><i class="fa fa-calendar"></i>My Calendar</a></li>
-                        <li><a href="#"><i class="fa fa-envelope"></i>My Inbox</a></li>
-                        <li><a href="#"><i class="fa fa-barcode"></i>My Task</a></li>
+                        <li><a href="{{ url_for('profile') }}"><i class="fa fa-user"></i>My Profile</a></li>
+
                         <li class="divider"></li>
                         <li><a href="#"><i class="fa fa-lock"></i>Screen lock</a></li>
                         <li><a href="{{url_for('logout')}}"><i class="fa fa-key"></i>Logout</a></li>
