--- a/TraiHat/webapp/templates/login.html
+++ b/TraiHat/webapp/templates/login.html
@@ -10,11 +10,11 @@
     <title>{{title}}</title>
 
     <!-- Bootstrap -->
-    <link href="{{url_for('static',filename = 'admin/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
-    <link href="{{url_for('static',filename = 'admin/css/waves.min.css')}}" type="text/css" rel="stylesheet">
-    <!--        <link rel="stylesheet" href="css/nanoscroller.css">-->
-    <link href="{{url_for('static',filename = 'admin/css/style.css')}}" type="text/css" rel="stylesheet">
-    <link href="{{url_for('static',filename = 'admin/font-awesome/css/font-awesome.min.css')}}" rel="stylesheet">
+    <link href="{{url_for('static',filename = 'admin2/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
+    <link href="{{url_for('static',filename = 'admin2/css/waves.min.css')}}" type="text/css" rel="stylesheet">
+    <!--        <link rel="stylesheet" href="css2/nanoscroller.css">-->
+    <link href="{{url_for('static',filename = 'admin2/css/style.css')}}" type="text/css" rel="stylesheet">
+    <link href="{{url_for('static',filename = 'admin2/font-awesome/css/font-awesome.min.css')}}" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -53,9 +53,9 @@
         </div>
     </div>
 </div>
-<script type="text/javascript" src="{{url_for('static',filename = 'admin/js/jquery.min.js')}}"></script>
-<script type="text/javascript" src="{{url_for('static',filename = 'admin/bootstrap/js/bootstrap.min.js')}}"></script>
-<script src="{{url_for('static',filename = 'admin/js/pace.min.js')}}"></script>
+<script type="text/javascript" src="{{url_for('static',filename = 'admin2/js/jquery.min.js')}}"></script>
+<script type="text/javascript" src="{{url_for('static',filename = 'admin2/bootstrap/js/bootstrap.min.js')}}"></script>
+<script src="{{url_for('static',filename = 'admin2/js/pace.min.js')}}"></script>
 </body>
 
 </html>
