--- a/TraiHat/webapp/templates/login.html
+++ b/TraiHat/webapp/templates/login.html
@@ -18,8 +18,8 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-    <script src="{{url_for('static',filename = 'admin/js/html5shiv.min.js')}}"></script>
-    <script src="{{url_for('static',filename = 'admin/js/respond.min.js')}}"></script>
+    <script src="{{url_for('static',filename = 'admin2/js/html5shiv.min.js')}}"></script>
+    <script src="{{url_for('static',filename = 'admin2/js/respond.min.js')}}"></script>
     <![endif]-->
 </head>
 <body>
