sửa hàm encode và decode sửa routes trang user/navleft.html,admin/navleft.html

--- a/TraiHat/webapp/templates/admin/navleft.html
+++ b/TraiHat/webapp/templates/admin/navleft.html
@@ -26,7 +26,7 @@
                                     <li><a href="{{ url_for('bloglist') }}">Blog list</a></li>
                                     <li><a href="{{ url_for('blogdetail') }}">Blog detail</a></li>
                                     <li><a href="{{ url_for('contact') }}">Contact Page</a></li>
-                                    <li><a href="{{ url_for('about') }}">About Page</a></li>
+                                    <li><a href="{{ url_for('aboutus') }}">About Page</a></li>
 
                             </ul>
 
