--- a/TraiHat/webapp/templates/user/navleft.html
+++ b/TraiHat/webapp/templates/user/navleft.html
@@ -32,7 +32,7 @@
                         <li><a href="{{ url_for('bloglist').replace("/admin/","/user/",1) }}">Blog list</a></li>
                         <li><a href="{{ url_for('blogdetail').replace("/admin/","/user/",1) }}">Blog detail</a></li>
                         <li><a href="{{ url_for('contact') }}" target="_blank">Contact Page</a></li>
-                        <li><a href="{{ url_for('about') }}" target="_blank">About Page</a></li>
+                        <li><a href="{{ url_for('aboutus') }}" target="_blank">About Page</a></li>
 
                     </ul>
 
