--- a/TraiHat/webapp/templates/home/base2.html
+++ b/TraiHat/webapp/templates/home/base2.html
@@ -63,7 +63,7 @@
                     <nav class="link-effect-7" id="link-effect-7">
                         <ul class="nav navbar-nav">
                             <li class="{{ params.get('nav_home')  }} act"><a href="/">Home</a></li>
-                            <li class="{{ params.get('nav_about')}} act" ><a href="{{url_for('aboutus')}}">About</a></li>
+                            <li class="{{ params.get('nav_about')}} act" ><a href="{{url_for('about_us')}}">About</a></li>
                             <li class="{{ params.get('nav_contact') }} act"><a href="{{url_for('contact')}}">Contact</a></li>
                         </ul>
                     </nav>
