--- a/TraiHat/webapp/templates/admin/navleft.html
+++ b/TraiHat/webapp/templates/admin/navleft.html
@@ -16,28 +16,29 @@
                                     class="fa arrow"></span></a>
                             <ul class="nav nav-second-level collapse">
 
-                                    <li><a href="{{ url_for('loginAdmin') }}">Login Admin</a></li>
-                                    <li><a href="{{ url_for('login') }}">Login User</a></li>
+                                    <li><a href="{{ url_for('login_admin') }}">Login Admin</a></li>
+                                    <li><a href="{{ url_for('login_us') }}">Login User</a></li>
                                     <li><a href="register.html">Register</a></li>
                                     <li><a href="404">404 Page</a></li>
                                     <li><a href="{{ url_for('index') }}">Home</a></li>
                                     <li><a href="lockscreen.html">Lockscreen</a></li>
-                                    <li><a href="{{ url_for('changepassword') }}">Change password</a></li>
-                                    <li><a href="{{ url_for('bloglist') }}">Blog list</a></li>
-                                    <li><a href="{{ url_for('blogdetail') }}">Blog detail</a></li>
+                                    <li><a href="{{ url_for('change_password') }}">Change password</a></li>
+                                    <li><a href="{{ url_for('blog_list') }}">Blog list</a></li>
+                                    <li><a href="{{ url_for('blog_detail') }}">Blog detail</a></li>
                                     <li><a href="{{ url_for('contact') }}">Contact Page</a></li>
-                                    <li><a href="{{ url_for('aboutus') }}">About Page</a></li>
+                                    <li><a href="{{ url_for('about_us') }}">About Page</a></li>
 
                             </ul>
 
                         </li>
 
-                    <li class="{{ params.get('nav_profile') }}">
+                    <li class="{{ params.get('nav_user') }}">
                         <a href="#"><i class="fa fa-users"></i> <span class="nav-label">Users</span><span
                                 class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="{{ url_for('profile') }}">profile</a></li>
-                            <li><a href="{{url_for('userlist')}}">User list</a></li>
+                            <li><a href="{{url_for('user_list')}}">User list</a></li>
+                            <li><a href="{{ url_for('change_password') }}">Change password</a></li>
 
                         </ul>
                     </li>
@@ -46,8 +47,8 @@
                         <a href="#"><i class="fa fa-pencil"></i> <span class="nav-label">Blog</span><span
                                 class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="{{ url_for('bloglist') }}">Blog list</a></li>
-                            <li><a href="{{ url_for('blogdetail') }}">Blog post</a></li>
+                            <li><a href="{{ url_for('blog_list') }}">Blog list</a></li>
+                            <li><a href="{{ url_for('blog_detail') }}">Blog post</a></li>
                         </ul>
                     </li>
 
