--- a/TraiHat/webapp/templates/home/aboutus.html
+++ b/TraiHat/webapp/templates/home/aboutus.html
@@ -1,5 +1,170 @@
 {% extends 'home/base2.html' %}
 {% block body_left %}
+    <div class="row">
+        <div class="team">
+            <h3 class="team-heading">Meet our team</h3>
+            <div class="team-grids">
+                <div class="row">
+                    <div class="col-md-6 team-grid">
+                        <div class="team-grid1">
+                            <img src="static/images/aboutus/Capture.PNG" alt=" " class="img-responsive" width="100%"
+                                 height="100%">
+                            <div class="p-mask">
+                                <p>Neque porro quisquam est, qui dolorem ipsum.</p>
+
+                            </div>
+                        </div>
+                        <h5>Đạt một lít<span>Super Admin</span></h5>
+                        <ul class="social">
+                            <li><a class="social-facebook" href="#">
+                                <i></i>
+                                <div class="tooltip"><span>Facebook</span></div>
+                            </a></li>
+                            <li><a class="social-twitter" href="#">
+                                <i></i>
+                                <div class="tooltip"><span>Twitter</span></div>
+                            </a></li>
+                            <li><a class="social-google" href="#">
+                                <i></i>
+                                <div class="tooltip"><span>Google+</span></div>
+                            </a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 team-grid">
+                        <div class="team-grid1">
+                            <img src="static/images/aboutus/g3.jpg" alt=" "
+                                 class="img-responsive" width="100%" height="100%">
+                            <div class="p-mask">
+                                <p>Neque porro quisquam est, qui dolorem ipsum.</p>
+
+                            </div>
+                        </div>
+                        <h5>Đạt một lít<span>Super Admin</span></h5>
+                        <ul class="social">
+                            <li><a class="social-facebook" href="#">
+                                <i></i>
+                                <div class="tooltip"><span>Facebook</span></div>
+                            </a></li>
+                            <li><a class="social-twitter" href="#">
+                                <i></i>
+                                <div class="tooltip"><span>Twitter</span></div>
+                            </a></li>
+                            <li><a class="social-google" href="#">
+                                <i></i>
+                                <div class="tooltip"><span>Google+</span></div>
+                            </a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 team-grid">
+                        <div class="team-grid1">
+                            <img src="static/images/aboutus/Capture.PNG" alt=" " class="img-responsive" width="100%"
+                                 height="100%">
+                            <div class="p-mask">
+                                <p>Neque porro quisquam est, qui dolorem ipsum.</p>
+
+                            </div>
+                        </div>
+                        <h5>Đạt một lít<span>Super Admin</span></h5>
+                        <ul class="social">
+                            <li><a class="social-facebook" href="#">
+                                <i></i>
+                                <div class="tooltip"><span>Facebook</span></div>
+                            </a></li>
+                            <li><a class="social-twitter" href="#">
+                                <i></i>
+                                <div class="tooltip"><span>Twitter</span></div>
+                            </a></li>
+                            <li><a class="social-google" href="#">
+                                <i></i>
+                                <div class="tooltip"><span>Google+</span></div>
+                            </a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 team-grid">
+                        <div class="team-grid1">
+                            <img src="static/images/aboutus/g3.jpg" alt=" "
+                                 class="img-responsive" width="100%" height="100%">
+                            <div class="p-mask">
+                                <p>Neque porro quisquam est, qui dolorem ipsum.</p>
+
+                            </div>
+                        </div>
+                        <h5>Đạt một lít<span>Super Admin</span></h5>
+                        <ul class="social">
+                            <li><a class="social-facebook" href="#">
+                                <i></i>
+                                <div class="tooltip"><span>Facebook</span></div>
+                            </a></li>
+                            <li><a class="social-twitter" href="#">
+                                <i></i>
+                                <div class="tooltip"><span>Twitter</span></div>
+                            </a></li>
+                            <li><a class="social-google" href="#">
+                                <i></i>
+                                <div class="tooltip"><span>Google+</span></div>
+                            </a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 team-grid">
+                        <div class="team-grid1">
+                            <img src="static/images/aboutus/g3.jpg" alt=" " class="img-responsive" width="100%"
+                                 height="100%">
+                            <div class="p-mask">
+                                <p>Neque porro quisquam est, qui dolorem ipsum.</p>
+
+                            </div>
+                        </div>
+                        <h5>Đạt một lít<span>Super Admin</span></h5>
+                        <ul class="social">
+                            <li><a class="social-facebook" href="#">
+                                <i></i>
+                                <div class="tooltip"><span>Facebook</span></div>
+                            </a></li>
+                            <li><a class="social-twitter" href="#">
+                                <i></i>
+                                <div class="tooltip"><span>Twitter</span></div>
+                            </a></li>
+                            <li><a class="social-google" href="#">
+                                <i></i>
+                                <div class="tooltip"><span>Google+</span></div>
+                            </a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 team-grid">
+                        <div class="team-grid1">
+                            <img src="static/images/aboutus/g3.jpg" alt=" "
+                                 class="img-responsive" width="100%" height="100%">
+                            <div class="p-mask">
+                                <p>Neque porro quisquam est, qui dolorem ipsum.</p>
+
+                            </div>
+                        </div>
+                        <h5>Đạt một lít<span>Super Admin</span></h5>
+                        <ul class="social">
+                            <li><a class="social-facebook" href="#">
+                                <i></i>
+                                <div class="tooltip"><span>Facebook</span></div>
+                            </a></li>
+                            <li><a class="social-twitter" href="#">
+                                <i></i>
+                                <div class="tooltip"><span>Twitter</span></div>
+                            </a></li>
+                            <li><a class="social-google" href="#">
+                                <i></i>
+                                <div class="tooltip"><span>Google+</span></div>
+                            </a></li>
+                        </ul>
+                    </div>
+                </div>
+
+
+                <div class="clearfix"></div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
-h
