--- a/TraiHat/webapp/templates/bloglist.html
+++ b/TraiHat/webapp/templates/bloglist.html
@@ -14,7 +14,7 @@
             </a>
             <div class="blog-desc">
                 <h3><a href="{{url_for('blog_detail',id =item.id|encodeID)}}">{{item.title}}</a></h3>
-                <span class="blog-meta"><a href="{{url_for('profile', id = item.user.id|encodeID)}}">{{item.user.user_name}}</a> {{item.ngaytaobaiviet}} <a href="#">934 Comments</a></span>
+                <span class="blog-meta"><a href="{{url_for('profile', id = item.user.id|encodeID)}}">{{item.user.pseudonym}}</a> {{item.ngaytaobaiviet}} <a href="#">934 Comments</a></span>
                 <p>
                     {{item.noiDung}}
                 </p>
