--- a/TraiHat/webapp/templates/admin/navleft.html
+++ b/TraiHat/webapp/templates/admin/navleft.html
@@ -18,7 +18,7 @@
 
                                     <li><a href="{{ url_for('login_admin') }}">Login Admin</a></li>
                                     <li><a href="{{ url_for('login_us') }}">Login User</a></li>
-                                    <li><a href="register.html">Register</a></li>
+                                    <li><a href="{{ url_for('register') }}">Register</a></li>
                                     <li><a href="404">404 Page</a></li>
                                     <li><a href="{{ url_for('index') }}">Home</a></li>
                                     <li><a href="lockscreen.html">Lockscreen</a></li>
