--- a/TraiHat/webapp/templates/ChangePassword.html
+++ b/TraiHat/webapp/templates/ChangePassword.html
@@ -8,7 +8,7 @@
 {% import 'layout.html' as layout with context -%}
 
 <form method="post">
-    {{ layout.messages_login() }}
+    {{ layout.messages }}
     {{ form.csrf_token() }}
     {{ form.password_Old.label}}
     {{ form.password_Old(size=32,class='form-control',placeholder="Password" ,minlength = 8, maxlength = 50)}}
