--- a/TraiHat/webapp/templates/admin/UserList.html
+++ b/TraiHat/webapp/templates/admin/UserList.html
@@ -55,11 +55,11 @@
                                 </div><!-- btn-group -->
                                 <div class="btn-group">
 
-                                    <button class="warning-alert btn-sweet-alert btn btn-success btn-3d btn-sm"
+                                    <button class="warning-alert btn-sweet-alert btn btn-success btn-3d btn-sm" id="test" name="test">
                                             {% if item.active.value %}
-                                            value="true"> Lock Account
+                                                <!--value="true"--> Lock Account
                                             {% else %}
-                                                value="false"> UnLock
+                                                <!--value="false"-->Unlock
                                             {% endif %}
                                     </button>
 
@@ -79,26 +79,5 @@
 {% block script %}
     {{ super() }}
     <script src="{{ url_for('static',filename='admin2/js/sweet-alert/sweetalert.min.js') }}"></script>
-    <script>
-        document.querySelector('.warning-alert').onclick = function () {
-
-            swal({
-                    title: "Are you sure?",
-                    text: "You will not be able to recover this imaginary file!",
-                    type: "warning",
-                    showCancelButton: true,
-                    confirmButtonColor: '#DD6B55',
-                    confirmButtonText: "Lock it!",
-                    closeOnConfirm: false,
-                    inputType: "text",
-                    inputPlaceholder: "sssssss",
-                    inputValue: "id",
-                    showLoaderOnConfirm: true
-
-                },
-                function () {
-                    swal("Lock!", "Your imaginary file has been deleted!", "success");
-                });
-        };
-    </script>
+    <script src="{{ url_for('static',filename='admin2/js/sweet-alert/button.js') }}"></script>
 {% endblock %}
