--- a/TraiHat/webapp/templates/home/blogdetail.html
+++ b/TraiHat/webapp/templates/home/blogdetail.html
@@ -1,41 +1,20 @@
-{% extends "home/base2.html" %}
-
-{% block head %}
+{% extends 'home/base2.html' %}
 {{ super() }}
-<link href="{{ url_for('static',filename='css/HomeStyle.css') }}">
-{% endblock head %}
-
 
 {% block body_left %}
+    <div class="tc-ch wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
 
-
-        <div class="tech-no">
-            <!-- technology-top -->
-            <div class="tc-ch wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
-                {% for item in params.get('bv') %}
                 <div class="tch-img">
                     <a href="singlepage.html"><img src="{{ url_for('static',filename = 'base2/images/t4.jpg')}}" class="img-responsive" alt=""></a>
                 </div>
 
                 <h3 class="tilte-post" style="text-align:center;text-tranform:uppercase"><a href="{{ url_for('blog', id = item.id) }}" > {{ item.title }} Lorem Ipsum is simply</a></h3>
                 <h6 class="author" style="text-align:right">BY <a href="{{ url_for('blog', id = item.id) }}">{{ item.user_name }}Diego Santos </a>{{ item.ngayDangTin }}JULY 10 2016.</h6>
-                    <p class="content" maxlength="30"><a href="{{ url_for('blog', id = item.id) }}">{{ item.noiDung }}Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                    <p class="content"><a href="{{ url_for('blog', id = item.id) }}">{{ item.noiDung }}Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
                     dolore magna aliqua. Ut enim ad minim veniam, quis nostrud eiusmod tempor incididunt ut labore et dolore
                 magna aliqua exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</a> </p>
                 <div class="bht1">
                     <a href="{{ url_for('blog',id = item.id) }}">Continue Reading</a>title
                 </div>
-                {% endfor %}
-                {% include 'Icon_soci.html' %}
-                <div class="clearfix"></div>
-
-            </div>
-        </div>
-
-{% endblock %}
-
-
-
-{% block script %}
-
+    </div>
 {% endblock %}
