--- a/TraiHat/webapp/templates/admin/UserList.html
+++ b/TraiHat/webapp/templates/admin/UserList.html
@@ -55,9 +55,9 @@
                                 </div><!-- btn-group -->
                                 <div class="btn-group">
 
-                                    <button class="warning-alert btn-sweet-alert btn btn-success btn-3d btn-sm"
+                                    <button class="warning-alert btn-sweet-alert btn btn-success btn-3d btn-sm"value="true">
                                             {% if item.active.value %}
-                                            value="true"> Lock Account
+                                             Lock Account
                                             {% else %}
                                                 value="false"> UnLock
                                             {% endif %}
